widget page and controller added

--- a/src/main/resources/templates/customer/product.html
+++ b/src/main/resources/templates/customer/product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style/product.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -13,12 +14,13 @@
         <aside class="sidebar">
             <h1>Fashin Admin</h1>
             <ul>
-                <li><a href="http://localhost:1211/customer/admin">Dashboard</a></li>
-                <li><a href="#">Orders</a></li>
-                <li><a href="http://localhost:1211/customer/product">Products</a></li>
-                <li><a href="http://localhost:1211/customer/category">Category</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="http://localhost:1211/customer/admin"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="#"><i class="fas fa-shopping-cart"></i> Orders</a></li>
+                <li><a href="http://localhost:1211/customer/product"><i class="fas fa-box"></i> Products</a></li>
+                <li><a href="http://localhost:1211/customer/category"><i class="fas fa-tags"></i> Category</a></li>
+                <li><a href="http://localhost:1211/customer/widget"><i class="fas fa-tags"></i> Widget</a></li>
+                <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
+                <li><a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </aside>
         <main class="main-content">
