--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -43,6 +43,18 @@
         <button id="searchbtn">Search</button>
     </form>
 
+    <!-- <aside class="sidebar">
+        <h1>Fashin Admin</h1>
+        <ul>
+            <li><a href="http://localhost:1211/customer/admin"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li><a href="#"><i class="fas fa-shopping-cart"></i> Orders</a></li>
+            <li><a href="http://localhost:1211/customer/product"><i class="fas fa-box"></i> Products</a></li>
+            <li><a href="http://localhost:1211/customer/category"><i class="fas fa-tags"></i> Category</a></li>
+            <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
+            <li><a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+        </ul>
+    </aside> -->
+
     <footer class="footer">
         <div class="first-bar">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
