--- a/src/main/resources/templates/customer/product.html
+++ b/src/main/resources/templates/customer/product.html
@@ -57,7 +57,7 @@
         </main>
     </div>
 
-    <form id="form">
+    <form id="form" method="post" action="/customer/product" enctype="multipart/form-data">
         <div id="container">
             <div class="addCategory">
                 <label for="addCategory">Add Category</label>
